--- a/nginx-service.yaml
+++ b/nginx-service.yaml
@@ -1,12 +1,14 @@
+---
 apiVersion: v1
 kind: Service
 metadata:
   name: nginx-service
 spec:
   selector:
-    app: nginx
+    app: nginx  # Selects the pods labeled with "app: nginx"
   ports:
-  - protocol: TCP
-    port: 80
-    targetPort: 80
-  type: LoadBalancer
+    - protocol: TCP
+      port: 80         # Port that the service will expose
+      targetPort: 80    # Port on the container to which traffic will be forwarded
+      nodePort: 30080   # External port to be accessed on each node (in the range 30000-32767)
+  type: NodePort       # Expose the service as a NodePort
